--- a/Elector website/index.html
+++ b/Elector website/index.html
@@ -18,6 +18,7 @@
              justify-content-center
              align-items-center
              vh-100
+             text-center
              start">
     
     <div class="w-400 p-5 shadow rounded">
