new file include

--- a/Elector website/AdminPanel.html
+++ b/Elector website/AdminPanel.html
@@ -21,21 +21,21 @@
 
     <!-- this is nav bar on dashboard -->
 
-    <nav class="navbar navbar-expand-lg navbar-light light-dark shadow " id="fixed">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark shadow" id="fixed">
         <div class="container-fluid">
-            <a class="navbar-brand d-flex" href="#">
+          <a class="navbar-brand d-flex" href="#">
+              <div class="flex-column">
                 <i class="social-icon"><img class="rounded-circle" style="width:15%"
-                        src="./image/member_voting.png" alt="AVATAR">
+                        src="./image/member_voting.png" alt="logo">
                 </i>
             </a>
-            <div class="chunav" style="margin-right: 20%; font-size: xx-large;">
-                CHUNAV
-            </div>
+          </div>
+          <h3 class="chunav">CHUNAV</h3>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            <button class="navbar-toggler " type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon btn btn-light"></span>
             </button>
             
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
