--- a/Elector website/index.html
+++ b/Elector website/index.html
@@ -29,7 +29,7 @@
                     align-items-center
                     flex-column">
             <img src="image/member_voting.png" 
-                class="w-50">
+                class="w-15 rounded-circle">
 
             <h3 class="display-4 fs-1
                        text-center
@@ -38,7 +38,7 @@
         </div>
 
         <div class="mb-3">
-            <label class="form-label">Admin ID</label>
+            <label class="form">Admin ID</label>
             <input type="text"
                    class="form-control" 
                    placeholder="Admin ID"
@@ -46,7 +46,7 @@
         </div>
 
         <div class="mb-3">
-            <label class="form-label">Password</label>
+            <label class="form">Password</label>
             <input type="password"
                    class="form-control" 
                    placeholder="xxx-xxx-xxx"
