new file include

--- a/Elector website/AdminPanel.html
+++ b/Elector website/AdminPanel.html
@@ -59,27 +59,27 @@
         <div class="card" style="width: 20rem;">
             <img class="card-img-top" src="./image/candidate.png" alt="Candidates">
             <div class="card-body">
-              <h5 class="card-title" style="text-align: center;">Candidates</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h1 class="card-title" style="text-align: center;">Candidates</h1>
+              <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a> -->
             </div>
           </div>
 
           <div class="card" style="width: 20rem;">
             <img class="card-img-top" src="./image/voters.jpg" alt="Voters">
             <div class="card-body">
-              <h5 class="card-title" style="text-align: center;">Voters</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h1 class="card-title" style="text-align: center;">Voters</h1>
+              <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a> -->
             </div>
           </div>
 
           <div class="card" style="width: 20rem;">
             <img class="card-img-top" src="./image/votes.jpg" alt="Vote">
             <div class="card-body">
-              <h5 class="card-title" style="text-align: center;">votes</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h1 class="card-title" style="text-align: center;">votes</h1>
+              <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a> -->
             </div>
           </div>
     </div>
