some design change

--- a/Elector website/AdminPanel.html
+++ b/Elector website/AdminPanel.html
@@ -19,16 +19,16 @@
 <body>
 
   <!-- this is nav bar on dashboard -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light py-5">
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark py-5">
     <div class="container-fluid">
       <a class="navbar-brand chunav fs-1" href="#">
         <img src="./image/member_voting.png" alt="" width="75" height="75"
           class="d-inline-block align-text-top rounded-circle">
         CHUNAV
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+      <button class="navbar-toggler btn btn-outline-warning" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon btn btn-light"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav ms-auto me-3 text-end align-items-end">
@@ -37,7 +37,7 @@
           </li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger font" href="#education">View candidate</a></li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger font" href="#skill">View voters</a></li>
-          <li class="nav-item"><button class="nav-link js-scroll-trigger btn btn-outline-warning" href="#skill">
+          <li class="nav-item"><button class="nav-link js-scroll-trigger text-light btn btn-outline-warning" href="#skill">
               LOGOUT</button></li>
         </ul>
       </div>
