--- a/Elector website/admin/AdminPanel.html
+++ b/Elector website/admin/AdminPanel.html
@@ -10,19 +10,19 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  <link rel="icon" href="image/vote.jpg">
+  <link rel="icon" href="../image/vote.jpg">
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <title>Chunav</title>
 </head>
 
 <body>
 
   <!-- this is nav bar on dashboard -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-dark py-5">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light py-5">
     <div class="container-fluid">
       <a class="navbar-brand chunav fs-1" href="#">
-        <img src="./image/member_voting.png" alt="" width="75" height="75"
+        <img src="../image/member_voting.png" alt="" width="75" height="75"
           class="d-inline-block align-text-top rounded-circle">
         CHUNAV
       </a>
@@ -37,7 +37,7 @@
           </li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger font" href="#education">View candidate</a></li>
           <li class="nav-item"><a class="nav-link js-scroll-trigger font" href="#skill">View voters</a></li>
-          <li class="nav-item"><button class="nav-link js-scroll-trigger text-light btn btn-outline-warning" href="#skill">
+          <li class="nav-item"><button class="nav-link js-scroll-trigger btn btn-outline-warning" href="#skill">
               LOGOUT</button></li>
         </ul>
       </div>
@@ -50,7 +50,7 @@
                 vh-75
                 flex-wrap">
     <div class="card" style="width: 20rem;">
-      <img class="card-img-top" src="./image/candidate.png" alt="Candidates">
+      <img class="card-img-top" src="../image/candidate.png" alt="Candidates">
       <div class="card-body">
         <h1 class="card-title" style="text-align: center;">Candidates</h1>
         <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -59,7 +59,7 @@
     </div>
 
     <div class="card" style="width: 20rem;">
-      <img class="card-img-top" src="./image/voters.jpg" alt="Voters">
+      <img class="card-img-top" src="../image/voters.jpg" alt="Voters">
       <div class="card-body">
         <h1 class="card-title" style="text-align: center;">Voters</h1>
         <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -68,7 +68,7 @@
     </div>
 
     <div class="card" style="width: 20rem;">
-      <img class="card-img-top" src="./image/votes.jpg" alt="Vote">
+      <img class="card-img-top" src="../image/votes.jpg" alt="Vote">
       <div class="card-body">
         <h1 class="card-title" style="text-align: center;">votes</h1>
         <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
