--- a/Elector website/admin/CandidateRegistration.html
+++ b/Elector website/admin/CandidateRegistration.html
@@ -8,9 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-    <link rel="icon" href="image/vote.jpg">
+    <link rel="icon" href="../image/vote.jpg">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Candidate Registration</title>
 </head>
 
@@ -22,7 +22,7 @@
                     <div class="card shadow-2-strong card-registration" style="border-radius: 15px;">
                         <div class="card-body p-4 p-md-5">
                             <div class="text-center">
-                                <img src="image/member_voting.png" class="w-15 rounded-circle">
+                                <img src="../image/member_voting.png" class="w-15 rounded-circle">
 
                                 <h3 class="display-4 fs-1
                                    text-center
@@ -33,7 +33,7 @@
                             </div>
                             <form>
                                 <div class="text-center mb-5">
-                                    <img src="./image/profile.jpg" class="w-25 img-thumbnail" id="picture"
+                                    <img src="../image/profile.jpg" class="w-25 img-thumbnail" id="picture"
                                     onclick="clickout();" />
                                     <input type="file" id="upload" onchange="showImage();" style="display: none;"
                                     accept="image/*" />
