--- a/Elector website/index.html
+++ b/Elector website/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,9 +11,56 @@
     <link rel="icon" href="image/vote.jpg">
 
     <link rel="stylesheet" href="css/style.css">
-    <title>Candidate Registration</title>
+    <title>CHUNAV - Dashboard</title>
 </head>
+
 <body>
-    
-</body>
+    <div class="fixed">
+    <a class="navbar-brand chunav fs-2" href="#">
+        <img src="image/member_voting.png" alt="" width="75" height="75"
+          class="d-inline-block align-text-top rounded-circle">
+        CHUNAV
+      </a>
+    <div class="sidebar">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+      </div>
+    </div>
+      <div class="content">
+        <div class="d-flex
+                justify-content-around
+                align-items-center
+                vh-75
+                flex-wrap">
+
+    <div class="card" style="width: 20rem;">
+      <div class="card-body">
+        <h1 class="card-title" style="text-align: center;">Candidates</h1>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+
+    <div class="card" style="width: 20rem;">
+      <img class="card-img-top" src="image/voters.jpg" alt="Voters">
+      <div class="card-body">
+        <h1 class="card-title" style="text-align: center;">Voters</h1>
+        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a> -->
+      </div>
+    </div>
+
+    <div class="card" style="width: 20rem;">
+      <img class="card-img-top" src="image/votes.jpg" alt="Vote">
+      <div class="card-body">
+        <h1 class="card-title" style="text-align: center;">votes</h1>
+        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a> -->
+      </div>
+    </div>
+  </div>
+
+      </div>
 </html>
