--- a/Elector website/admin/AdminPanel.html
+++ b/Elector website/admin/AdminPanel.html
@@ -19,7 +19,7 @@
 <body>
 
   <!-- this is nav bar on dashboard -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light py-5">
+  <nav class="navbar navbar-expand-lg navbar-light text-dark bg-light py-5">
     <div class="container-fluid">
       <a class="navbar-brand chunav fs-1" href="#">
         <img src="../image/member_voting.png" alt="" width="75" height="75"
