--- a/Elector website/admin/index.html
+++ b/Elector website/admin/index.html
@@ -23,7 +23,6 @@
     
     <div class="w-400 p-5 shadow rounded">
         <form method="post" action="#"></form>
-
         <div class="d-flex
                     justify-content-center
                     align-items-center
@@ -36,7 +35,12 @@
                        chunav">
                     Chunav</h3>
         </div>
-
+        <div class="alert alert-success" role="alert">
+            This is a success alert—check it out!
+          </div>
+          <div class="alert alert-warning" role="alert">
+            This is a success alert—check it out!
+          </div>
         <div class="mb-3">
             <label class="form">Admin ID</label>
             <input type="text"
