--- a/Elector website/client/index.html
+++ b/Elector website/client/index.html
@@ -20,7 +20,7 @@
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-12 col-md-8 col-lg-6 col-xl-5">
                     <div class="card bg-dark text-white" style="border-radius: 1rem;">
-                        <div class="card-body p-5 text-center">
+                        <div class="card-body p-3 text-center">
                             <div class="text-center">
                                 <img src="../image/member_voting.png" class="w-15 rounded-circle">
 
@@ -32,9 +32,16 @@
 
                             </div>
                             <form action="" >
+                                
                             <div class="mb-md-5 mt-md-4 pb-5">
                                 <h3 class="mb-4 pb-2 pb-md-0 mb-md-3"> Voters Login Form</h3>
                                 <p class="text-white-50 mb-5">Please enter your login and password!</p>
+                                <div class="alert alert-success" role="alert">
+                                    This is a success alert—check it out!
+                                  </div>
+                                  <div class="alert alert-warning" role="alert">
+                                    This is a success alert—check it out!
+                                  </div>
                                 <div class="form-outline form-white mb-4">
                                     <label class="form-label" for="typeEmailX">Email</label>
                                     <input type="email" id="typeEmailX" class="form-control form-control-lg" placeholder="voters@gmail.com" />
