last update in frontend

--- a/Elector website/admin/AdminPanel.html
+++ b/Elector website/admin/AdminPanel.html
@@ -35,7 +35,7 @@
                 vh-75
                 flex-wrap">
 
-    <div class="card" style="width: 25rem;">
+    <div class="card" style="width: 25rem; margin-bottom: 30px;">
       <div class="card-body">
         <h1 class="card-title" style="text-align: center;">Voting Status</h1>
         <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
