--- a/Elector website/index.html
+++ b/Elector website/index.html
@@ -57,7 +57,7 @@
       </div>
     </div>
 
-    <div class="card" style="width: 30rem;">
+    <div class="card" style="width: 30rem; margin-bottom: 30px;">
       <img class="card-img-top" src="image/Candidates.jpg" alt="Voters">
       <div class="card-body text-center">
         <h1 class="card-title" style="text-align: center;">Candidates</h1>
@@ -66,7 +66,7 @@
       </div>
     </div>
 
-    <div class="card" style="width: 30rem;">
+    <div class="card" style="width: 30rem; margin-bottom: 30px;">
       <img class="card-img-top" src="image/votes.jpg" alt="Vote">
       <div class="card-body text-center">
         <h1 class="card-title" style="text-align: center;">voters</h1>
