--- a/Elector website/admin/AdminPanel.html
+++ b/Elector website/admin/AdminPanel.html
@@ -2,73 +2,83 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <link rel="icon" href="../image/vote.jpg">
+  <link rel="icon" href="../image/vote.jpg">
 
-    <link rel="stylesheet" href="../css/style.css">
-    <title>CHUNAV - Dashboard</title>
+  <link rel="stylesheet" href="../css/style.css">
+  <title>CHUNAV - Dashboard</title>
 </head>
 
 <body>
-    <div class="fixed">
+  <div class="fixed">
     <a class="navbar-brand chunav fs-2" href="#">
-        <img src="../image/member_voting.png" alt="" width="75" height="75"
-          class="d-inline-block align-text-top rounded-circle">
-        CHUNAV
-      </a>
+      <img src="../image/member_voting.png" alt="" width="75" height="75"
+        class="d-inline-block align-text-top rounded-circle">
+      CHUNAV
+    </a>
     <div class="sidebar">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-      </div>
+      <a class="active" href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+      <div class="btn-group dropup logout">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">Dropup</button>
+        <div class="dropdown-menu">
+            <a href="#" class="dropdown-item">Action</a>
+            <a href="#" class="dropdown-item">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a href="#" class="dropdown-item">LOGOUT</a>
+        </div>
     </div>
-      <div class="content">
-        <div class="d-flex
+    </div>
+  </div>
+  <div class="content">
+    <div class="d-flex
                 justify-content-around
                 align-items-center
                 vh-75
                 flex-wrap">
 
-    <div class="card" style="width: 25rem; margin-bottom: 30px;">
-      <div class="card-body">
-        <h1 class="card-title" style="text-align: center;">Voting Status</h1>
-        <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
+      <div class="card" style="width: 25rem; margin-bottom: 30px;">
+        <div class="card-body">
+          <h1 class="card-title" style="text-align: center;">Voting Status</h1>
+          <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
+        </div>
+      </div>
+
+      <div class="card" style="width: 20rem;">
+        <img class="card-img-top" src="../image/voters.jpg" alt="Voters">
+        <div class="card-body">
+          <h1 class="card-title" style="text-align: center;">Voters</h1>
+          <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a> -->
+        </div>
+      </div>
+
+      <div class="card" style="width: 20rem;">
+        <img class="card-img-top" src="../image/votes.jpg" alt="Vote">
+        <div class="card-body">
+          <h1 class="card-title" style="text-align: center;">votes</h1>
+          <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a> -->
+        </div>
       </div>
     </div>
 
-    <div class="card" style="width: 20rem;">
-      <img class="card-img-top" src="../image/voters.jpg" alt="Voters">
-      <div class="card-body">
-        <h1 class="card-title" style="text-align: center;">Voters</h1>
-        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a> -->
-      </div>
-    </div>
-
-    <div class="card" style="width: 20rem;">
-      <img class="card-img-top" src="../image/votes.jpg" alt="Vote">
-      <div class="card-body">
-        <h1 class="card-title" style="text-align: center;">votes</h1>
-        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a> -->
-      </div>
-    </div>
   </div>
 
-      </div>
 </html>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 <script>
-  const xValues = [50,60,70,80,90,100,110,120,130,140,150];
-  const yValues = [7,8,8,9,9,9,10,11,14,14,15];
-  
+  const xValues = [50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 150];
+  const yValues = [7, 8, 8, 9, 9, 9, 10, 11, 14, 14, 15];
+
   new Chart("myChart", {
     type: "line",
     data: {
@@ -82,11 +92,10 @@
       }]
     },
     options: {
-      legend: {display: false},
+      legend: { display: false },
       scales: {
-        yAxes: [{ticks: {min: 6, max:16}}],
+        yAxes: [{ ticks: { min: 6, max: 16 } }],
       }
     }
   });
-  </script>
-  
+</script>
