voter registraion update

--- a/Elector website/voter/VoterRegistration.html
+++ b/Elector website/voter/VoterRegistration.html
@@ -41,6 +41,12 @@
                                     <input type="file" id="upload" onchange="showImage();" style="display: none;"
                                     accept="image/*" />
                                 </div>
+                                <div class="alert alert-success" role="alert">
+                                    This is a success alert—check it out!
+                                  </div>
+                                  <div class="alert alert-warning" role="alert">
+                                    This is a success alert—check it out!
+                                  </div>
                                 <div class="row">
                                     <div class="col-md-6 mb-4">
 
